--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="sidebar-wrapper">
     <div class="about_container">
         <h1 data-ix="header-transition" class="about">LEARNER.<br/>THINKER.<br/>WORKER.<br/>&amp; ANALYSER.</h1>
-        <p data-ix="text-slide" class="about-copy">Eric Chen, Computer Information System student at <a target="_blank" href="http://louisville.edu/" class="link">University of Louisville.</a> Currently, interning with <a href="https://lge-ku.com/" target="_blank" class="link">LG&E KU</a> in the Network Operation Center department. Feel free to explore and discover his experiences.</p>
+        <p data-ix="text-slide" class="about-copy">I, Eric Chen, Computer Information System student at <a target="_blank" href="http://louisville.edu/" class="link">University of Louisville.</a> Currently, an intern with <a href="https://lge-ku.com/" target="_blank" class="link">LG&E KU</a> in the Network Operation Center department. Scroll down to learn more.</p>
         <div data-ix="social" class="social">
             <a href="https://www.linkedin.com/in/eric-chen-1b5980b0/" target="_blank" class="linkedin_button w-button"></a>
             <a href="mailto:jiamingchen1996@gmail.com?" target="_blank" class="email_button w-button"></a>
@@ -24,18 +24,18 @@
 
 <div class="content-wrapper">
     <div class="dropwater w-clearfix">
-        <div data-ix="text-slide-2" class="active-title">About</div> 
+        <div data-ix="text-slide-2" class="work_number">.001</div> 
         <img src="img/iphone-white.png" width="333" srcset="img/iphone-eric.png 500w, img/iphone-eric.png 666w" sizes="(max-width: 479px) 57vw, (max-width: 767px) 42vw, (max-width: 991px) 43vw, 25vw" class="image-3"/>    
-        <div data-ix="text-slide-2" class="title_sub"></div>
-        <div data-ix="text-slide-2" class="title">Experiences</div>
-        <div data-ix="text-slide-2" class="title-right">Education</div>
+        <div data-ix="text-slide-2" class="title_sub">Iphone</div>
+        <div data-ix="text-slide-2" class="title">Welcome</div>
+        <a href="https://www.linkedin.com/in/eric-chen-1b5980b0/" target="_blank" class="linkedin_button_right w-button"></a>
     </div>
     <div class="quikstories w-clearfix">
         <div data-ix="text-slide-2" class="work_number">.002</div>
-        <img src="http://uploads.webflow.com/57c5dd245cc3aa553acf1266/597987eedbed8500017b788f_quikstories.png" width="375" data-ix="work-transition" srcset="http://uploads.webflow.com/57c5dd245cc3aa553acf1266/597987eedbed8500017b788f_quikstories-p-500.png 500w, http://uploads.webflow.com/57c5dd245cc3aa553acf1266/597987eedbed8500017b788f_quikstories.png 598w" sizes="(max-width: 479px) 55vw, (max-width: 767px) 40vw, (max-width: 991px) 42vw, 24vw" class="image-2"/>
-        <div data-ix="text-slide-2" class="title_sub">GoPro - UI/UX</div>
-        <div data-ix="text-slide-2" class="title">QuikStories</div>
-        <a href="https://dribbble.com/shots/3689769-GoPro-QuikStories" target="_blank" class="gp_watch_dribbble w-button"></a>
+        <div class="dw_img"><img src="img/ipad-white.png" data-ix="work-transition" width="243" srcset="img/ipad-aboutme.png 500w, img/ipad-aboutme.png 800w, img/ipad-aboutme.png 1080w, img/ipad-aboutme.png 1365w" sizes="(max-width: 479px) 73vw, (max-width: 767px) 58vw, (max-width: 991px) 61vw, 35vw" class="image"/></div>
+        <div data-ix="text-slide-2" class="title_sub">Ipad</div>
+        <div data-ix="text-slide-2" class="title">About Me</div>
+        <a href="https://www.linkedin.com/in/eric-chen-1b5980b0/" target="_blank" class="linkedin_button_right w-button"></a>
     </div>
     <div class="dropwater w-clearfix">
         <div data-ix="text-slide-2" class="work_number">.003</div>
